# opencarrier

./: .gitignore  AUDIT.md  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  middleware.rs  migration.rs  pages.rs  routes.rs  server.rs  session_auth.rs  types.rs  webchat.rs  ws.rs
crates/api/src/routes/: agent_channels.rs  agents.rs  auth.rs  bindings.rs  bots.rs  brain.rs  clone_admins.rs  clones.rs  common.rs  comms.rs  config.rs  cron.rs  files.rs  hub.rs  kv.rs  messaging.rs  observability.rs  plugins.rs  providers.rs  sender_routes.rs  sessions.rs  state.rs  tools_skills.rs  webhooks.rs  weixin.rs  weixin_oa.rs
crates/api/static/: index_body.html  share.html
crates/api/static/js/: app.js
crates/api/templates/: agents.html  base.html  brain.html  chat.html  overview.html  user_chat.html
crates/api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/carrier-api/: Cargo.toml
crates/carrier-api/src/: command_security.rs  lib.rs  middleware.rs  migration.rs  pages.rs  rate_limiter.rs  routes.rs  server.rs  stream_dedup.rs  types.rs  ws.rs
crates/carrier-api/src/routes/: agents.rs  auth.rs  bindings.rs  bots.rs  brain.rs  clones.rs  common.rs  comms.rs  config.rs  cron.rs  files.rs  hub.rs  kv.rs  messaging.rs  observability.rs  plugins.rs  providers.rs  sender_routes.rs  sessions.rs  state.rs  tools_skills.rs  webhooks.rs  weixin.rs
crates/carrier-api/static/: index_body.html  share.html
crates/carrier-api/templates/: agents.html  brain.html  overview.html
crates/carrier-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/carrier-cli/: Cargo.toml
crates/carrier-cli/src/: acp.rs  launcher.rs  main.rs  mcp.rs  serve.rs  setup.rs  templates.rs  ui.rs
crates/carrier-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/carrier-cli/tests/: serve_mode_test.rs
crates/carrier-kernel/: Cargo.toml
crates/carrier-kernel/src/: background.rs  brain.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  daemon.rs  dotenv.rs  error.rs  event_bus.rs  handle.rs  heartbeat.rs  kernel.rs  lib.rs  management.rs  mcp_conn.rs  mcp_docker.rs  mcp_registry.rs  messaging.rs  metering.rs  plugins.rs  prompt_sources.rs  registry.rs  scheduler.rs  sessions.rs  supervisor.rs  tool_builder.rs  wizard.rs  workspace.rs
crates/carrier-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs
crates/carrier-plugin-sdk/: Cargo.toml
crates/carrier-plugin-sdk/src/: channel.rs  lib.rs  macros.rs  types.rs
crates/carrier-runtime/: Cargo.toml
crates/carrier-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  auth_cooldown.rs  browser.rs  channel_manager.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  hooks.rs  host_functions.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  loop_guard.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  str_utils.rs  subprocess_sandbox.rs  tool_context.rs  tool_runner.rs  web_fetch.rs  web_search.rs  workspace_context.rs
crates/carrier-runtime/src/drivers/: anthropic.rs  claude_code.rs  dashscope_image.rs  dashscope_tts.rs  dashscope_video.rs  fallback.rs  gemini.rs  kling.rs  minimax_image.rs  mod.rs  openai.rs  openai_images.rs  qwen_code.rs
crates/carrier-runtime/src/plugin/: bridge.rs  builtin.rs  builtin_registry.rs  instance.rs  loader.rs  manager.rs  mod.rs  router.rs  tool_dispatch.rs
crates/carrier-runtime/src/tools/: agent.rs  browser_tool.rs  filesystem.rs  knowledge.rs  media.rs  misc.rs  mod.rs  shell.rs
crates/channels/dingtalk/: Cargo.toml
crates/channels/dingtalk/src/: api.rs  channel.rs  lib.rs  models.rs  token.rs  types.rs  ws.rs
crates/channels/feishu/: Cargo.toml
crates/channels/feishu/src/: api.rs  api_ext.rs  channel.rs  lib.rs  models.rs  token.rs  types.rs  ws.rs
crates/channels/wecom/: Cargo.toml
crates/channels/wecom/src/: channel.rs  crypto.rs  lib.rs  smartbot.rs  token.rs  tools.rs
crates/channels/weixin/: Cargo.toml
crates/channels/weixin-oa/: Cargo.toml
crates/channels/weixin/src/: api.rs  (+7 more)
crates/cli/: Cargo.toml
crates/cli/src/: acp.rs  main.rs  mcp.rs  serve.rs  setup.rs  templates.rs  ui.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: background.rs  brain.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  daemon.rs  dotenv.rs  error.rs  event_bus.rs  flow_runner.rs  handle.rs  heartbeat.rs  kernel.rs  lib.rs  management.rs  mcp_conn.rs  mcp_docker.rs  mcp_registry.rs  messaging.rs  metering.rs  plugins.rs  prompt_sources.rs  registry.rs  scheduler.rs  sessions.rs  supervisor.rs  tool_builder.rs  wizard.rs  workspace.rs
crates/kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: a2a.rs  agent_loop.rs  audit.rs  auth_cooldown.rs  browser.rs  channel_manager.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  intent_classifier.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  llm_driver_impl.rs  llm_errors.rs  mcp.rs  mcp_server.rs  media_understanding.rs  memory_handle.rs  model_catalog.rs  process_manager.rs  prompt_builder.rs  routing.rs  sandbox.rs  session_repair.rs  str_utils.rs  subprocess_sandbox.rs  text_tool_recovery.rs  tool_context.rs  tool_policy.rs  tool_runner.rs  web_fetch.rs  web_search.rs  wechat_identity.rs  (+1 more)
docs/aginx/aginxbrower/: Cargo.toml  README.md
tools/amap-mcp/: Cargo.toml
tools/amap-mcp/src/: main.rs
tools/browser-mcp/: Cargo.toml  README.md
tools/browser-mcp/src/: main.rs
tools/feishu-mcp/: Cargo.toml  README.md
tools/feishu-mcp/src/: feishu.rs  main.rs
tools/searxng-mcp/: Cargo.toml  README.md
tools/searxng-mcp/src/: main.rs
tools/wecom-mcp/: Cargo.toml  README.md
tools/wecom-mcp/src/: main.rs  wecom.rs
xtask/: Cargo.toml
(+466 files in other folders)
