[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/memory",
    "crates/runtime",
    "crates/api",
    "crates/kernel",
    "crates/cli",
    "crates/clone",
    "crates/lifecycle",
    "crates/channels/feishu",
    "crates/channels/wecom",
    "crates/channels/weixin",
    "crates/channels/dingtalk",
    "crates/channels/weixin-oa",
    "xtask",
    "tools/mcp-common",
    "tools/bilibili-mcp",
    "tools/zhihu-mcp",
    "tools/xiaohongshu-mcp",
    "tools/reddit-mcp",
    "tools/twitter-mcp",
    "tools/wechat-oa-mcp",
    "tools/feishu-mcp",
    "tools/wecom-mcp",
    "tools/browser-mcp",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/yinnho/carrier"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmp-serde = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
dashmap = "6"
crossbeam = "0.8"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# IDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP client (for LLM drivers)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "gzip", "deflate", "brotli", "blocking", "cookies"] }

# Async trait
async-trait = "0.1"

# Base64
base64 = "0.22"

# Bytes
bytes = "1"

# Futures
futures = "0.3"

# WebSocket client
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2"

# WASM sandbox
wasmtime = "41"

# HTTP server (for API daemon)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br"] }

# Home directory resolution
dirs = "6"

# Dynamic library loading (FFI loader)
libloading = "0.8"

# Directory walking
walkdir = "2"

# Security
sha2 = "0.10"
sha1 = "0.10"
aes = "0.8"

# Regex
regex = "1"
lazy_static = "1.4"
cbc = "0.1"
hmac = "0.12"
hex = "0.4"
subtle = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Rate limiting
governor = "0.8"

# Interactive CLI
colored = "3"

argon2 = "0.5"

# HTML entity decoding
html-escape = "0.2"

# Lightweight regex
regex-lite = "0.1"

# XML parsing
roxmltree = "0.20"

# URL encoding
urlencoding = "2"

# MD5 hashing
md-5 = "0.10"

# Socket options (SO_REUSEADDR)
socket2 = "0.5"

# Zip archive extraction
zip = { version = "2", default-features = false, features = ["deflate"] }

# Testing
tokio-test = "0.4"
tempfile = "3"

# Internal crates
types = { path = "crates/types" }
memory = { path = "crates/memory" }
runtime = { path = "crates/runtime" }
api = { path = "crates/api" }
kernel = { path = "crates/kernel" }
cli = { path = "crates/cli" }
clone = { path = "crates/clone" }
lifecycle = { path = "crates/lifecycle" }
channel-feishu = { path = "crates/channels/feishu" }
channel-wecom = { path = "crates/channels/wecom" }
channel-weixin = { path = "crates/channels/weixin" }
channel-dingtalk = { path = "crates/channels/dingtalk" }
channel-weixin-oa = { path = "crates/channels/weixin-oa" }
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 8
opt-level = 2
strip = false
