[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Build automation for the Carrier workspace"

[[bin]]
name = "reencode_manifest"
path = "src/bin/reencode_manifest.rs"

[dependencies]
carrier-types = { path = "../crates/carrier-types" }
toml = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
