[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the OpenCarrier Agent OS daemon"

[dependencies]
types = { path = "../types" }
kernel = { path = "../kernel" }
runtime = { path = "../runtime" }
memory = { path = "../memory" }
clone = { path = "../clone" }
lifecycle = { path = "../lifecycle" }
channel-feishu = { path = "../channels/feishu" }
channel-wecom = { path = "../channels/wecom" }
channel-weixin = { path = "../channels/weixin" }
channel-weixin-oa = { path = "../channels/weixin-oa" }
channel-dingtalk = { path = "../channels/dingtalk" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
argon2 = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
anyhow = { workspace = true }
fs4 = "0.12"
lazy_static = "1"
minijinja = "2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
