[package]
name = "carrier-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the OpenCarrier Agent OS daemon"

[dependencies]
carrier-types = { path = "../carrier-types" }
carrier-kernel = { path = "../carrier-kernel" }
carrier-runtime = { path = "../carrier-runtime" }
carrier-memory = { path = "../carrier-memory" }
carrier-clone = { path = "../carrier-clone" }
carrier-lifecycle = { path = "../carrier-lifecycle" }
carrier-channel-feishu = { path = "../channels/feishu" }
carrier-channel-wecom = { path = "../channels/wecom" }
carrier-channel-weixin = { path = "../channels/weixin" }
carrier-channel-dingtalk = { path = "../channels/dingtalk" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
argon2 = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
anyhow = { workspace = true }
fs4 = "0.12"
lazy_static = "1"
minijinja = "2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
