[package]
name = "carrier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Carrier Agent OS"

[[bin]]
name = "carrier"
path = "src/main.rs"

[dependencies]
carrier-types = { path = "../carrier-types" }
carrier-kernel = { path = "../carrier-kernel" }
carrier-api = { path = "../carrier-api" }
carrier-memory = { path = "../carrier-memory" }
carrier-clone = { path = "../carrier-clone" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
carrier-runtime = { path = "../carrier-runtime" }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
