[package]
name = "carrier-plugin-sdk"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "SDK for writing Carrier plugins in Rust"
repository = "https://github.com/yinnho/carrier"
documentation = "https://docs.rs/carrier-plugin-sdk"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
