[package]
name = "carrier-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for OpenCarrier"

[dependencies]
carrier-types = { path = "../carrier-types" }
carrier-plugin-sdk = { path = "../carrier-plugin-sdk" }
carrier-clone = { path = "../carrier-clone" }
carrier-memory = { path = "../carrier-memory" }
carrier-lifecycle = { path = "../carrier-lifecycle" }
carrier-channel-feishu = { path = "../channels/feishu" }
carrier-channel-wecom = { path = "../channels/wecom" }
carrier-channel-weixin = { path = "../channels/weixin" }
carrier-channel-dingtalk = { path = "../channels/dingtalk" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
cbc = { workspace = true }
roxmltree = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
libloading = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
shlex = "1"
rand = { workspace = true }
subtle = { workspace = true }
aes = { workspace = true }
md-5 = "0.10"
urlencoding = "2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
