[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the OpenCarrier Agent OS"

[[bin]]
name = "opencarrier"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }
kernel = { path = "../kernel" }
api = { path = "../api" }
memory = { path = "../memory" }
clone = { path = "../clone" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
runtime = { path = "../runtime" }
uuid = { workspace = true }
colored = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
