[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the OpenCarrier Agent OS"

[dependencies]
types = { path = "../types" }
memory = { path = "../memory" }
runtime = { path = "../runtime" }
lifecycle = { path = "../lifecycle" }
clone = { path = "../clone" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"
zeroize = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
