[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for OpenCarrier"

[dependencies]
types = { path = "../types" }
clone = { path = "../clone" }
memory = { path = "../memory" }
lifecycle = { path = "../lifecycle" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
libloading = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
shlex = "1"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
