[package]
name = "searxng-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SearXNG search MCP Server — privacy-respecting web search via self-hosted meta search engine"

[dependencies]
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
mcp-common = { path = "../mcp-common" }
