[package]
name = "wecom-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WeCom (WeChat Work) MCP Server — 47 tools for messaging, docs, calendar, todo, and more"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
