[package]
name = "carrier-channel-feishu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Feishu/Lark channel adapter for OpenCarrier"

[dependencies]
carrier-types = { path = "../../carrier-types" }
tokio = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
