[package]
name = "channel-wecom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WeCom (Enterprise WeChat) channel adapter for OpenCarrier"

[dependencies]
types = { path = "../../types" }
tokio = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
cbc = { workspace = true }
aes = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
roxmltree = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
