[package]
name = "channel-weixin-oa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WeChat Official Account channel adapter for OpenCarrier"

[dependencies]
types = { path = "../../types" }
tokio = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
roxmltree = { workspace = true }