[package]
name = "carrier-channel-weixin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WeChat iLink channel adapter for OpenCarrier"

[dependencies]
carrier-types = { path = "../../carrier-types" }
tokio = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
cbc = { workspace = true }
aes = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
roxmltree = { workspace = true }
base64 = { workspace = true }
md-5 = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
