[package]
name = "aginxbrower"
version = "0.1.0"
edition = "2021"
authors = ["OpenCarrier Team"]
description = "Lightweight server-side browser engine powered by Obscura for fast scraping and JS click."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
obscura = { git = "https://github.com/h4ckf0r0day/obscura", tag = "v0.1.7" }
scraper = "0.21"
html2md = "0.2"
